--- a/themes/assets/css/style.css
+++ b/themes/assets/css/style.css
@@ -9892,6 +9892,10 @@ ul.pro-amenities li span i {
 }
 
 .step-register {
+	background: url(../images/login-register.jpg) center center/cover no-repeat !important;
+	height: 100%;
+	overflow: auto !important;
+	direction: ltr;
 	position: absolute;
 	height: 100%;
 	overflow: auto !important;
